--- a/NationalRail.Portable/NationalRail.Portable.fsproj
+++ b/NationalRail.Portable/NationalRail.Portable.fsproj
@@ -8,7 +8,7 @@
     <ProjectGuid>5552f566-e77e-433b-8459-a41f865af52c</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>NationalRail.WP8</RootNamespace>
-    <AssemblyName>NationalRail.WP8</AssemblyName>
+    <AssemblyName>NationalRail</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile47</TargetFrameworkProfile>
     <Name>NationalRail.WP8</Name>
@@ -37,6 +37,7 @@
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.Portable.FSharp.Targets" />
   <ItemGroup>
+    <None Include="packages.config" />
     <Compile Include="..\NationalRail.WP7\HtmlAgilityPack.FSharp.fs">
       <Link>HtmlAgilityPack.FSharp.fs</Link>
     </Compile>
@@ -46,9 +47,9 @@
     <Compile Include="..\NationalRail.WP7\LazyAsync.fs">
       <Link>LazyAsync.fs</Link>
     </Compile>
-    <None Include="..\NationalRail.WP7\RailReferences.csv">
+    <EmbeddedResource Include="..\NationalRail.WP7\RailReferences.csv">
       <Link>RailReferences.csv</Link>
-    </None>
+    </EmbeddedResource>
     <Compile Include="..\NationalRail.WP7\GeoUtils.fs">
       <Link>GeoUtils.fs</Link>
     </Compile>
@@ -58,7 +59,6 @@
     <Compile Include="..\NationalRail.WP7\LiveDepartures.fs">
       <Link>LiveDepartures.fs</Link>
     </Compile>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
