All Stations and Recent Stations

--- a/UKTrains.WP7/UKTrains.WP7.csproj
+++ b/UKTrains.WP7/UKTrains.WP7.csproj
@@ -73,6 +73,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Xml" />
+    <Reference Include="TombstoneHelper">
+      <HintPath>..\packages\WP7TombstoneHelper.2.5\lib\TombstoneHelper.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
