--- a/UKTrains.WP7/packages.config
+++ b/UKTrains.WP7/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Coding4Fun.Toolkit.Controls" version="2.0.6" targetFramework="wp71" />
   <package id="WindowsPhoneControls" version="0.3.0" targetFramework="wp71" />
+  <package id="WP7TombstoneHelper" version="2.5" targetFramework="wp71" />
   <package id="WPtoolkit" version="4.2012.10.30" targetFramework="wp71" />
 </packages>
