--- a/UKTrains.WP8/packages.config
+++ b/UKTrains.WP8/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Coding4Fun.Toolkit.Controls" version="2.0.6" targetFramework="wp80" />
+  <package id="WP7TombstoneHelper" version="2.5" targetFramework="wp80" />
   <package id="WPToolkit" version="4.2013.06.11" targetFramework="wp80" />
 </packages>
