Allow to pin stations

--- a/UKTrains.WP7/packages.config
+++ b/UKTrains.WP7/packages.config
@@ -4,4 +4,5 @@
   <package id="WindowsPhoneControls" version="0.3.0" targetFramework="wp71" />
   <package id="WP7TombstoneHelper" version="2.5" targetFramework="wp71" />
   <package id="WPtoolkit" version="4.2012.10.30" targetFramework="wp71" />
+  <package id="WPToolkit" version="4.2013.06.11" targetFramework="wp71" />
 </packages>
