--- a/LearnOnTheGo.WP7/LearnOnTheGo.WP7.csproj
+++ b/LearnOnTheGo.WP7/LearnOnTheGo.WP7.csproj
@@ -65,6 +65,9 @@
     </Reference>
     <Reference Include="Microsoft.Phone.Interop" />
     <Reference Include="mscorlib.Extensions" />
+    <Reference Include="SharpGIS.GZipWebClient">
+      <HintPath>..\packages\SharpGIS.GZipWebClient.1.4.0.0\lib\wp71\SharpGIS.GZipWebClient.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="mscorlib" />
     <Reference Include="system" />
