--- a/LearnOnTheGo.WP7/LearnOnTheGo.WP7.csproj
+++ b/LearnOnTheGo.WP7/LearnOnTheGo.WP7.csproj
@@ -134,6 +134,9 @@
     <Content Include="Icons\dark\appbar.page.pdf.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Icons\dark\appbar.reply.email.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icons\dark\appbar.refresh.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
