--- a/LearnOnTheGo.WP8/LearnOnTheGo.WP8.csproj
+++ b/LearnOnTheGo.WP8/LearnOnTheGo.WP8.csproj
@@ -100,6 +100,9 @@
     <Compile Include="..\LearnOnTheGo.WP7\LazyAsyncExtensions.cs">
       <Link>LazyAsyncExtensions.cs</Link>
     </Compile>
+    <Compile Include="..\LearnOnTheGo.WP7\LittleWatson.cs">
+      <Link>LittleWatson.cs</Link>
+    </Compile>
     <Compile Include="..\LearnOnTheGo.WP7\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
       <Link>MainPage.xaml.cs</Link>
