--- a/UKTrains.WP7/packages.config
+++ b/UKTrains.WP7/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AdDuplexWP7" version="2.7.0.3" targetFramework="wp71" />
   <package id="Coding4Fun.Toolkit.Controls" version="2.0.6" targetFramework="wp71" />
   <package id="SharpGIS.GZipWebClient" version="1.4.0.0" targetFramework="wp71" />
   <package id="WindowsPhoneControls" version="0.3.0" targetFramework="wp71" />
   <package id="WP7TombstoneHelper" version="2.5" targetFramework="wp71" />
   <package id="WPToolkit" version="4.2013.06.11" targetFramework="wp71" />
+  <package id="wpunifiedad" version="1.3.2" targetFramework="wp71" />
 </packages>
