--- a/UKTrains.WP7/UKTrains.WP7.csproj
+++ b/UKTrains.WP7/UKTrains.WP7.csproj
@@ -64,19 +64,19 @@
     </Reference>
     <Reference Include="Inneractive.Nokia.Ad, Version=1.0.8.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\Inneractive.Nokia.Ad.dll</HintPath>
+      <HintPath>..\lib\wpunifiedad\Inneractive.Nokia.Ad.dll</HintPath>
     </Reference>
     <Reference Include="MC.Phone.Ads, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.dll</HintPath>
+      <HintPath>..\lib\wpunifiedad\MC.Phone.Ads.dll</HintPath>
     </Reference>
     <Reference Include="MC.Phone.Ads.AdDuplex, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.AdDuplex.dll</HintPath>
+      <HintPath>..\lib\wpunifiedad\MC.Phone.Ads.AdDuplex.dll</HintPath>
     </Reference>
     <Reference Include="MC.Phone.Ads.InnerActive, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.InnerActive.dll</HintPath>
+      <HintPath>..\lib\wpunifiedad\MC.Phone.Ads.InnerActive.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Controls, Version=7.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
