--- a/UKTrains.WP8/UKTrains.WP8.csproj
+++ b/UKTrains.WP8/UKTrains.WP8.csproj
@@ -241,16 +241,16 @@
     </Reference>
     <Reference Include="Microsoft.Phone.Controls, Version=8.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
     <Reference Include="Inneractive.Nokia.Ad">
-      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\Inneractive.Nokia.Ad.dll</HintPath>
+      <HintPath>..\lib\wpunifiedad\Inneractive.Nokia.Ad.dll</HintPath>
     </Reference>
     <Reference Include="MC.Phone.Ads">
-      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.dll</HintPath>
+      <HintPath>..\lib\wpunifiedad\MC.Phone.Ads.dll</HintPath>
     </Reference>
     <Reference Include="MC.Phone.Ads.AdDuplex">
-      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.AdDuplex.dll</HintPath>
+      <HintPath>..\lib\wpunifiedad\MC.Phone.Ads.AdDuplex.dll</HintPath>
     </Reference>
     <Reference Include="MC.Phone.Ads.InnerActive">
-      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.InnerActive.dll</HintPath>
+      <HintPath>..\lib\wpunifiedad\MC.Phone.Ads.InnerActive.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Phone.Controls.Toolkit">
       <HintPath>..\packages\WPToolkit.4.2013.06.11\lib\wp8\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
