--- a/NationalRail.WP7/packages.config
+++ b/NationalRail.WP7/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FSharp.Data" version="1.1.6" targetFramework="wp71" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="wp71" />
 </packages>
