--- a/Coursera.WP7/Coursera.WP7.fsproj
+++ b/Coursera.WP7/Coursera.WP7.fsproj
@@ -62,7 +62,8 @@
       <HintPath>..\lib\wp7\FSharp.Core.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Data">
-      <HintPath>..\..\..\Forks\FSharp.Data\bin\sl4-windowsphone71\FSharp.Data.dll</HintPath>
+      <HintPath>..\packages\FSharp.Data.1.1.6\lib\sl4-windowsphone71\FSharp.Data.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\packages\HtmlAgilityPack.1.4.6\lib\sl4-windowsphone71\HtmlAgilityPack.dll</HintPath>
